subtest-impl/tests/snapshots/expand_impl__snapshots@inherited_lint_expectation_after_subtest.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/inherited_lint_expectation_after_subtest.rs
---
#[test]
#[expect(
    unused_variables,
    reason = "the lint fires on the statement following the subtest"
)]
fn a_test_function_triggering_the_lint_after_the_subtest() {
    let unused = 1;
}
mod a_test_function_triggering_the_lint_after_the_subtest_subtests {
    use super::*;
    #[test]
    #[allow(
        unused_variables,
        reason = "the lint fires on the statement following the subtest"
    )]
    fn a_subtest_inheriting_nothing() {
        assert_eq!(1 + 1, 2);
    }
}
